Criada abstracao para os services